// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib/tap error rendering catalogue > AMBIGUOUS_COMMAND 1`] = `
"> cypress tap command --test-id r7 --command-id 1
That command id matches more than one row of the test.

"1" matches:

  h2:1 (before each)
  h3:1 (before each)
  h5:1 (after each)

Qualify the id with the section it belongs to, as cypress tap reporter lists it."
`;

exports[`lib/tap error rendering catalogue > ATTEMPT_NOT_FOUND 1`] = `
"> cypress tap reporter --test-id r7 --attempt 5
No attempt of this test matched that number.

Looked for --attempt 5. Test "r7" has 3 attempts.

--attempt takes a 1-based attempt number and selects an earlier attempt of a retried test; omit it for the latest."
`;

exports[`lib/tap error rendering catalogue > BINDING_NOT_FOUND 1`] = `
"> cypress tap status
Could not make a connection to the Cypress session.

The Cypress session may still be loading, so try again in a moment. If the problem persists, the tab running Cypress may have been closed; open a browser in Cypress and try again."
`;

exports[`lib/tap error rendering catalogue > BINDING_THREW 1`] = `
"> cypress tap reporter
The Cypress session failed while running the command.

Check the Cypress session with cypress tap status, then try again.

If the problem persists, search for an existing issue or open a GitHub issue at

  https://github.com/cypress-io/cypress/issues"
`;

exports[`lib/tap error rendering catalogue > CDP_UNREACHABLE 1`] = `
"> cypress tap status
Lost the connection to the Cypress session's browser.

The browser may have just closed. Make sure Cypress is running with a browser open, then try again."
`;

exports[`lib/tap error rendering catalogue > CLI_OUTDATED 1`] = `
"> cypress tap status
The targeted Cypress session is newer than this CLI.

Update the CLI with npm install --save-dev cypress@latest, then try again."
`;

exports[`lib/tap error rendering catalogue > COMMAND_NOT_FOUND 1`] = `
"> cypress tap command --test-id r7 --command-id 9
No command in this test matched that id.

Looked for --command-id "9".

Run cypress tap reporter --test-id <id> to list the commands in the test."
`;

exports[`lib/tap error rendering catalogue > FRAME_READ_FAILED 1`] = `
"> cypress tap dom --selector ".item"
Reading the app under test failed.

The page may have navigated mid-read. Try again once it has settled.

If the problem persists, search for an existing issue or open a GitHub issue at

  https://github.com/cypress-io/cypress/issues"
`;

exports[`lib/tap error rendering catalogue > GRAPHQL_FAILED 1`] = `
"> cypress tap specs
The Cypress session failed while answering a data query.

Try the command again.

If the problem persists, search for an existing issue or open a GitHub issue at

  https://github.com/cypress-io/cypress/issues"
`;

exports[`lib/tap error rendering catalogue > GRAPHQL_UNREACHABLE 1`] = `
"> cypress tap specs
Could not connect to the Cypress session to read its data.

The Cypress session may have just closed. Make sure Cypress is running in open mode, then try again.

If the problem persists, search for an existing issue or open a GitHub issue at

  https://github.com/cypress-io/cypress/issues"
`;

exports[`lib/tap error rendering catalogue > INSTANCE_NOT_FOUND 1`] = `
"> cypress tap --instance 4321 dom --selector "#status"
No Cypress session matched that process id.

Looked for --instance 4321.

Run cypress tap instances to list the Cypress sessions you can tap into."
`;

exports[`lib/tap error rendering catalogue > INSTANCE_OUTDATED 1`] = `
"> cypress tap status
The targeted Cypress session is older than this CLI.

Update Cypress in the running project with npm install --save-dev cypress@latest, restart it, then try again."
`;

exports[`lib/tap error rendering catalogue > INVALID_ARGUMENTS 1`] = `
"> cypress tap run
The command was given an argument it cannot accept.

"run" is missing the required <spec> argument(s).

Usage: cypress tap run <spec>

Run cypress tap <command> --help for the arguments it takes."
`;

exports[`lib/tap error rendering catalogue > INVALID_OPTIONS 1`] = `
"> cypress tap reporter
The command was given an option it cannot accept.

"reporter" is missing the required --test-id option.

Usage: cypress tap reporter [options]

Run cypress tap <command> --help for the options it takes."
`;

exports[`lib/tap error rendering catalogue > INVALID_PAYLOAD 1`] = `
"> cypress tap dom --selector "#status"
The command was given input this CLI could not read.

"dom" received a non-object args payload, rather than one keyed by name.

Run cypress tap <command> --help for the arguments and options it takes.

If the problem persists, search for an existing issue or open a GitHub issue at

  https://github.com/cypress-io/cypress/issues"
`;

exports[`lib/tap error rendering catalogue > INVALID_VALUE 1`] = `
"> cypress tap dom --selector ".item" --at 5
An invalid value was given.

Expected --at to be 0 to 2, since ".item" matched 3 elements.

Instead the value was: "5""
`;

exports[`lib/tap error rendering catalogue > MISSING_COMPANION_OPTION 1`] = `
"> cypress tap dom --at 1
You passed the --at flag without also passing the --selector flag.

Pass --selector to choose the elements to index into, or omit --at to read the whole document."
`;

exports[`lib/tap error rendering catalogue > NO_AUT 1`] = `
"> cypress tap dom --selector "#status"
No app under test is loaded.

Run a spec first with cypress tap run <spec>. To read the app as it was at an earlier command, pin that command with cypress tap pin."
`;

exports[`lib/tap error rendering catalogue > NO_BROWSER_ATTACHED 1`] = `
"> cypress tap dom --selector "#status"
The Cypress session is running, but no test browser is open.

The Cypress session is pid 4321, at /home/dev/shop.

Open a Chromium based browser in Cypress, then try again."
`;

exports[`lib/tap error rendering catalogue > NO_INSTANCE 1`] = `
"> cypress tap dom --selector "#status"
Could not find a Cypress session to tap into.

Start Cypress with cypress open, select a testing type and launch a browser, then try again."
`;

exports[`lib/tap error rendering catalogue > NO_PROJECT 1`] = `
"> cypress tap run cypress/e2e/checkout.cy.ts
The Cypress session has no project open.

Open a project in Cypress, then try again."
`;

exports[`lib/tap error rendering catalogue > PIN_TARGET_REQUIRED 1`] = `
"> cypress tap pin
The pin command was not told what to pin.

Pass --test-id and --command-id, as listed by cypress tap reporter, or --clear to release the current pin."
`;

exports[`lib/tap error rendering catalogue > PROTOCOL_MISMATCH 1`] = `
"> cypress tap status
The Cypress session answered in a way this CLI does not recognize.

The Cypress session and this CLI are likely different versions. Update the older of the two with npm install --save-dev cypress@latest, then try again."
`;

exports[`lib/tap error rendering catalogue > RENDERER_UNRESPONSIVE 1`] = `
"> cypress tap dom --selector "#status"
The Cypress session is reachable, but the page running it is not responding.

No response within the specified timeout (30000ms).

It may be paused in DevTools, stuck in a loop, or starved of memory. Pass --timeout <ms> to wait longer."
`;

exports[`lib/tap error rendering catalogue > SNAPSHOT_NOT_FOUND 1`] = `
"> cypress tap pin --test-id r7 --command-id 3 --at middle
No snapshot of this command matched that name or index.

Looked for --at "middle". This command has: before, after.

Run cypress tap command --test-id <id> --command-id <id> to list the snapshots a command has. --at takes a snapshot name or a 1-based index; omit it to pin the command’s final state."
`;

exports[`lib/tap error rendering catalogue > SNAPSHOT_UNAVAILABLE 1`] = `
"> cypress tap pin --test-id r7 --command-id 3
That command has no DOM snapshot to pin.

The app under test did not take the pin.

Snapshots are captured in open mode and kept only for the most recent tests, as numTestsKeptInMemory sets. Run the spec again to capture fresh snapshots, or raise numTestsKeptInMemory to keep more."
`;

exports[`lib/tap error rendering catalogue > SPEC_IN_PROGRESS 1`] = `
"> cypress tap dom --selector "#status"
The spec cypress/e2e/checkout.cy.ts is currently running.

Use cypress tap status to verify when the spec has finished."
`;

exports[`lib/tap error rendering catalogue > SPEC_NOT_FOUND 1`] = `
"> cypress tap run cypress/e2e/checkout.cy.ts
The Cypress session has no spec matching that path.

Looked for "cypress/e2e/checkout.cy.ts".

cypress tap specs lists the specs the Cypress session can run. If the spec exists but is not listed, widen specPattern in the Cypress config."
`;

exports[`lib/tap error rendering catalogue > SPEC_NOT_STARTED 1`] = `
"> cypress tap dom --selector "#status"
No spec is available to read.

Start a spec with the run command, then read it once it has finished."
`;

exports[`lib/tap error rendering catalogue > SPEC_START_FAILED 1`] = `
"> cypress tap run cypress/e2e/checkout.cy.ts
The Cypress session could not start the spec.

The Cypress session returned no result for "cypress/e2e/checkout.cy.ts".

Check the Cypress session with cypress tap status, then try again.

If the problem persists, search for an existing issue or open a GitHub issue at

  https://github.com/cypress-io/cypress/issues"
`;

exports[`lib/tap error rendering catalogue > STALE_HANDLE 1`] = `
"> cypress tap dom --selector "#status"
The Cypress session navigated while running the command.

Run the command again."
`;

exports[`lib/tap error rendering catalogue > STALE_INSTANCE 1`] = `
"> cypress tap --instance 4321 dom --selector "#status"
The Cypress session was running, but is no longer responding.

Looked for --instance 4321.

It likely exited uncleanly. Start Cypress again with cypress open, then try again."
`;

exports[`lib/tap error rendering catalogue > TEST_NOT_FOUND 1`] = `
"> cypress tap reporter --test-id r7
No test in this spec matched that id.

Looked for --test-id "r7".

Run cypress tap reporter to list the tests in the spec."
`;

exports[`lib/tap error rendering catalogue > TESTING_TYPE_NOT_CONFIGURED 1`] = `
"> cypress tap run cypress/e2e/checkout.cy.ts
That testing type is not configured for this project.

Configure it in the Cypress config, or start Cypress in a testing type the project supports.

Learn more:

  https://on.cypress.io/configuration"
`;

exports[`lib/tap error rendering catalogue > UNKNOWN_COMMAND 1`] = `
"> cypress tap oel2k
Unknown command "oel2k"

This Cypress session (v15.4.0) offers: status, specs, run, dom, reporter."
`;

exports[`lib/tap error rendering catalogue > UNKNOWN_OPTION 1`] = `
"> cypress tap dom --bogus
Unknown option "--bogus"

Usage: cypress tap dom [options]"
`;
